--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ shadowJar {
 }
 
 task uberjar(type: Jar, dependsOn: shadowJar) {
+    zip64 true
     archiveFileName = 'server.jar'
     manifest {
         attributes('Implementation-Title': appName)
