--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -5,5 +5,6 @@
     "**/.settings": true,
     "**/.factorypath": true
   },
-  "editor.autoSave": "on"
+"editor.autoSave": "on",
+"java.configuration.updateBuildConfiguration": "interactive"
 }
