--- a/gradle.properties
+++ b/gradle.properties
@@ -7,5 +7,5 @@ org.gradle.caching=true
 junit_version=5.6.1
 logback_version=1.2.3
 logging_version=1.8.3
-readingbat_version=1.1.0
-utils_version=0265fab
+readingbat_version=96e5d3e
+utils_version=aeef399
